Android: SMB domain credentials reversed

Attempting to login using a domain login on Android fails because the domain and user parts are being reversed. For the example user CONTOSO\barbara, the login prompt suggests "CONTOSO;barbara", but the login actually succeeds for "barbara;CONTOSO". Also, when the login for "CONTOSO;barbara" fails, the login prompt re-appears with the username pre-filled with "CONTOSO" (domain) rather than "barbara" (user). Other apps I've tested authenticate correctly with names of the form "CONTOSO\barbara".

Reproduced for 2.0.6 - Android 7.1 on Nexus 9 and 5.1.1 on Xperia Z.