vlc_credential: fix domain/username switch for smb

Fixes #17858